Closed Bug 580091 Opened 16 years ago Closed 15 years ago

<TABLE><b><tbody> </table> incorrectly reconstructs the active formatting elements

Categories

(Core :: DOM: HTML Parser, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla2.0b7
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: abarth-mozilla, Assigned: hsivonen)

References

Details

Attachments

(1 file, 1 obsolete file)

Test 1 of 1 in resources/tricky01.dat failed. Input: <TABLE><b><tbody> </table> Got: | <html> | <head> | <body> | <b> | <b> | " " | <table> | <tbody> Expected: | <html> | <head> | <body> | <b> | <table> | <tbody> | " "
Probably a duplicate of bug 525960.
Depends on: 525960
Priority: -- → P2
Note that "in table text" was a useless mode in implementations that always use a text accumulation buffer in the tree builder anyway. Flushing text twice in the "foo</ignored>bar" case is OK, because the tree op executor will join "foo" and "bar" into one text node. Note that I would have deoptimized flushing in the tree builder this way anyway when fixing bug 561311. Test cases will land as part of bug 559023.
Assignee: nobody → hsivonen
Status: NEW → ASSIGNED
Attachment #474513 - Flags: review?(jonas)
Nominating for 2.0 since we're treating other parsing algorithm correctness bugs as blockers.
blocking2.0: --- → ?
No longer depends on: 525960
Sorry. I again failed to sync hg right before exporting.
Attachment #474513 - Attachment is obsolete: true
Attachment #474518 - Flags: review?(jonas)
Attachment #474513 - Flags: review?(jonas)
Depends on: 559023
blocking2.0: ? → betaN+
Comment on attachment 474518 [details] [diff] [review] Reorganize lazy text flushing in the tree builder, reconstruct the active formatting elements while in table, tbody or tr, v2 rs=me. This one seems somewhat risky, so might be worth waiting until after beta7 to land it.
Attachment #474518 - Flags: review?(jonas) → review+
Whiteboard: [ready to land if bug 595797 gets approval]
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Whiteboard: [ready to land if bug 595797 gets approval]
Target Milestone: --- → mozilla2.0b8
Target Milestone: mozilla2.0b8 → mozilla2.0b7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: