Bug 580091 - Make the HTML5 parser reconstruct formatting elements properly when text inside table gets foster-parented. rs=jonas, a=blocking2.0-betaN.